Fix very small gap between the tabs and the content div when the zoom is at 125% on Chrome browsers.

--- a/aem-webapp/src/main/webapp/resources/css/react/generic-components/default/tabs.css
+++ b/aem-webapp/src/main/webapp/resources/css/react/generic-components/default/tabs.css
@@ -1,7 +1,7 @@
 .tabs-default {
     list-style: none;
     padding: 0;
-    height: 14px; /* Removes the space between the tabs and the div that holds the content */
+    height: 13px; /* Removes the space between the tabs and the div that holds the content */
 }
 
 .tabs-default > div > li {
